--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,14 @@
 <resources>
 
     <style name="Theme.NovaGincanaBiblica" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.SplashScreenApp" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/white</item>
+
+    </style>
+
+    <style name="SplashScreenTheme" parent="Theme.SplashScreenApp">
+        <item name="android:windowBackground">@drawable/splash_inset</item>
+    </style>
 </resources>
+
