--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="basic_container_color">#fcfcfc</color>
+    <color name="basic_container_color">#EBEBEB</color>
     <color name="basic_container_without_shadow">#DDDDDD</color>
     <color name="background_color">#ffffff</color>
     <color name="contrast_color">#424242</color>
+    <color name="container_in_container_color">#A8A8A8</color>
     <color name="letter_not_word">#FFFFFF</color>
     <color name="highlight_text">#FFDD71</color>
     <color name="green">#D9FAB2</color>
