--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="container_in_container_color">#A8A8A8</color>
     <color name="letter_not_word">#FFFFFF</color>
     <color name="highlight_text">#FFDD71</color>
+    <color name="just_black">#2F2F2F</color>
     <color name="green">#D9FAB2</color>
 </resources>
