--- a/app/src/main/res/drawable/tbq.xml
+++ b/app/src/main/res/drawable/tbq.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="200dp"
     android:height="200dp"
+    android:tint="@color/contrast_color"
     android:viewportWidth="200"
     android:viewportHeight="200">
   <path
