--- a/app/src/main/res/values-notnight-v31/themes.xml
+++ b/app/src/main/res/values-notnight-v31/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.NovaGincanaBiblica" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowLightStatusBar">true</item>
-        <item name="android:statusBarColor">@color/contrast_color</item>
+        <item name="android:statusBarColor">@color/background_color</item>
     </style>
 
 </resources>
